@@ -24,5 +24,5 @@ detaching-temporary/main.cpp:174:5: warning: Don't call QList::first() on tempor
 detaching-temporary/main.cpp:174:5: warning: Don't call QList::last() on temporary [-Wclazy-detaching-temporary]
 detaching-temporary/main.cpp:175:5: warning: Don't call QList::operator[]() on temporary [-Wclazy-detaching-temporary]
 detaching-temporary/main.cpp:177:5: warning: Don't call QString::operator[]() on temporary [-Wclazy-detaching-temporary]
-detaching-temporary/main.cpp:178:5: warning: Don't call QString::operator[]() on temporary [-Wclazy-detaching-temporary]
 detaching-temporary/main.cpp:178:5: warning: Don't call QList::operator[]() on temporary [-Wclazy-detaching-temporary]
+detaching-temporary/main.cpp:178:5: warning: Don't call QString::operator[]() on temporary [-Wclazy-detaching-temporary]
